--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "mysql2": "^2.3.3",
     "node-fetch": "^3.2.10",
     "nodemailer": "^6.8.0",
-    "tracer": "^1.1.6"
+    "tracer": "^1.1.6",
+    "vue": "^3.2.45"
   },
   "name": "paymy.work",
   "version": "1.0.0",
