--- a/package.json
+++ b/package.json
@@ -8,22 +8,18 @@
     "@fastify/static": "^6.4.0",
     "@fastify/swagger": "^8.1.0",
     "@fastify/view": "^7.0.0",
-    "@graphql-tools/schema": "^8.5.0",
-    "aws-sdk": "^2.1247.0",
     "eta": "^1.12.3",
     "fast-jwt": "^2.0.2",
     "fastify": "^4.0.3",
     "fastify-plugin": "^4.3.0",
     "fastify-qs": "^4.0.0",
-    "glob": "^8.0.3",
-    "mercurius": "^10.0.0",
     "mysql2": "^2.3.3",
     "node-fetch": "^3.2.10",
     "nodemailer": "^6.8.0",
     "tracer": "^1.1.6",
     "vue": "^3.2.45"
   },
-  "name": "paymy.work",
+  "name": "facturamea",
   "version": "1.0.0",
   "main": "index.js",
   "engines": {
