--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mysql2": "^2.3.3",
     "node-fetch": "^3.2.10",
     "nodemailer": "^6.8.0",
+    "nodemon": "^2.0.20",
     "tracer": "^1.1.6",
     "vue": "^3.2.45"
   },
