--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "@fastify/jwt": "^6.2.1",
     "@fastify/multipart": "^7.1.0",
     "@fastify/static": "^6.4.0",
-    "@fastify/swagger": "^8.1.0",
     "@fastify/view": "^7.0.0",
+    "dotenv": "^16.0.3",
     "eta": "^1.12.3",
     "fast-jwt": "^2.0.2",
     "fastify": "^4.0.3",
