--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "@fastify/multipart": "^7.1.0",
     "@fastify/static": "^6.4.0",
     "@fastify/view": "^7.0.0",
+    "aws-sdk": "^2.1309.0",
     "dotenv": "^16.0.3",
-    "eta": "^1.12.3",
+    "eta": "^2.0.0",
     "fast-jwt": "^2.0.2",
     "fastify": "^4.0.3",
     "fastify-plugin": "^4.3.0",
