--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
     "tracer": "^1.1.6",
-    "vue": "^3.2.45"
+    "vue": "^3.2.45",
+    "web-push": "^3.6.7"
   },
   "name": "facturamea",
   "version": "1.0.0",
