--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
     "tracer": "^1.3.0",
-    "vue": "^3.2.45",
-    "web-push": "^3.6.7"
+    "vue": "^3.2.45"
   },
   "name": "facturamea",
   "version": "1.0.0",
